--- a/ProyectoDB/Form2.resx
+++ b/ProyectoDB/Form2.resx
@@ -121,7 +121,7 @@
   <data name="Button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -154,7 +154,7 @@
   <data name="Button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -187,7 +187,7 @@
   <data name="btnMesa1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -220,7 +220,7 @@
   <data name="Button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -253,7 +253,7 @@
   <data name="btnMesa6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -286,7 +286,7 @@
   <data name="Button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -319,7 +319,7 @@
   <data name="Button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -352,7 +352,7 @@
   <data name="Button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -385,7 +385,7 @@
   <data name="Button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -415,19 +415,19 @@
         xhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMaYO5ub+A637zzgF+7h2AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnLogin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="Button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIOSURBVHhe7ZtBSsRAEEWzdCN4EfEmiitPpngbV7oWFPQG
-        HsGFiNYTBj49CZ3qJNKV7gdv4Qw18385ySiTGTqdTifhwrw138xP86dyyUhWMpO9mBPz3vw2x54ogmSn
-        A11cMPBgjj1oROniWgJbG3ugyNJpFhw36cv+3bw2T83aISNZyawd6DTrnMDJQwd5oDMzGmROl3BnZuEM
-        qkNsMypk1y50y5K+1UV42U9Bdu1Ctyw6gNFx93EPVI67j3ugctx93AOV4+7jHijkynw1n8xzbtgIdx/3
-        QAE35pd5eA6WsBXaBbO4B5yk5ZFXQjVoMFyTsfL8zOFQDRoO12KqPLdXhQbENQhTHjQkLiVUedCguIRw
-        5UHDYikhy4MGxhLClgcNjV5ClwcNjh7ClwcNj3PZRXnQAjiH3ZQHLYE5+DM2LR/RD/PSPLojx7OZzkSV
-        JRzdmKP5BezpEPj7rzS9Yw5NnwQP7GYJWgA97GIJGh69hF+CBscSQi9BQ2MpYZeggXEJIZegYXEp4Zag
-        QXENQi1BQ+JahFmCBsQ1mVpCEx+MHBhbwotZDRoMtyBdwqO5FdoFs7gHCuFlz2+e8s19PP6fuPu4ByrH
-        3cc9UDnuPu6BynH3af5CyeYvlW3+YunmL5eHpr8wAc1/ZQYYYGvp4RBJstPBXV7huOHkwRk0fYusUTKS
-        lcyzj/lOp9MZhmH4BYoUAjZqgLMtAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAAg5JREFUeF7tm0FKxEAQRbN0I3gR8SaKK0+meBtXuhYU9AYewYWI1hMGPj0Jneok
+        0pXuB2/hDDXzfznJKJMZOp1OJ+HCvDXfzE/zp3LJSFYyk72YE/Pe/DbHniiCZKcDXVww8GCOPWhE6eJa
+        Alsbe6DI0mkWHDfpy/7dvDZPzdohI1nJrB3oNOucwMlDB3mgMzMaZE6XcGdm4QyqQ2wzKmTXLnTLkr7V
+        RXjZT0F27UK3LDqA0XH3cQ9UjruPe6By3H3cA5Xj7uMeKOTKfDWfzHNu2Ah3H/dAATfml3l4DpawFdoF
+        s7gHnKTlkVdCNWgwXJOx8vzM4VANGg7XYqo8t1eFBsQ1CFMeNCQuJVR50KC4hHDlQcNiKSHLgwbGEsKW
+        Bw2NXkKXBw2OHsKXBw2Pc9lFedACOIfdlActgTn4MzYtH9EP89I8uiPHs5nORJUlHN2Yo/kF7OkQ+Puv
+        NL1jDk2fBA/sZglaAD3sYgkaHr2EX4IGxxJCL0FDYylhl6CBcQkhl6BhcSnhlqBBcQ1CLUFD4lqEWYIG
+        xDWZWkITH4wcGFvCi1kNGgy3IF3Co7kV2gWzuAcK4WXPb57yzX08/p+4+7gHKsfdxz1QOe4+7oHKcfdp
+        /kLJ5i+Vbf5i6eYvl4emvzABzX9lBhhga+nhEEmy08FdXuG44eTBGTR9i6xRMpKVzLOP+U6n0xmGYfgF
+        ihQCNmqAsy0AAAAASUVORK5CYII=
 </value>
   </data>
 </root>
