Se centran pantallas, se agrega funcionalidad a boton en AdminMenu

--- a/ProyectoDB/Form2.resx
+++ b/ProyectoDB/Form2.resx
@@ -121,7 +121,7 @@
   <data name="Button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -154,7 +154,7 @@
   <data name="Button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -187,7 +187,7 @@
   <data name="btnMesa1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -220,7 +220,7 @@
   <data name="Button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -253,7 +253,7 @@
   <data name="btnMesa6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -286,7 +286,7 @@
   <data name="Button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -319,7 +319,7 @@
   <data name="Button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -352,7 +352,7 @@
   <data name="Button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -385,7 +385,7 @@
   <data name="Button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7CAAAOwgEVKEqAAAAGOUlE
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7BAAAOwQG4kWvtAAAGOUlE
         QVR4Xu2dx6slRRxGn3HMM45ZEAMIjnnMWXEh4l+grlwIgxsXDsaFmBUTopgFMS4GMaHgQhQXIrpQzGEh
         Ys45Y/oOzI/b3Nvv3b7P6q4O34HDvLmhq6vr61Td1XfOGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhj
         jDHGGGNM11kuD5C7yHV5wfQC2nI3uVIu44UyaPxH5PfybXmENP3gBPme/E6ukVvKCUjHN/LftZ4vTT+4
@@ -418,7 +418,7 @@
   <data name="Button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAAg5JREFUeF7tm0FKxEAQRbN0I3gR8SaKK0+meBtXuhYU9AYewYWI1hMGPj0Jneok
+        vwAADr8BOAVTJAAAAg5JREFUeF7tm0FKxEAQRbN0I3gR8SaKK0+meBtXuhYU9AYewYWI1hMGPj0Jneok
         0pXuB2/hDDXzfznJKJMZOp1OJ+HCvDXfzE/zp3LJSFYyk72YE/Pe/DbHniiCZKcDXVww8GCOPWhE6eJa
         Alsbe6DI0mkWHDfpy/7dvDZPzdohI1nJrB3oNOucwMlDB3mgMzMaZE6XcGdm4QyqQ2wzKmTXLnTLkr7V
         RXjZT0F27UK3LDqA0XH3cQ9UjruPe6By3H3cA5Xj7uMeKOTKfDWfzHNu2Ah3H/dAATfml3l4DpawFdoF
@@ -428,6 +428,36 @@
         xDWZWkITH4wcGFvCi1kNGgy3IF3Co7kV2gWzuAcK4WXPb57yzX08/p+4+7gHKsfdxz1QOe4+7oHKcfdp
         /kLJ5i+Vbf5i6eYvl4emvzABzX9lBhhga+nhEEmy08FdXuG44eTBGTR9i6xRMpKVzLOP+U6n0xmGYfgF
         ihQCNmqAsy0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bttnAjustesAdmin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAdcAAAHXAYySCGgAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAFdUlEQVR4XuWbWch9UxjGjyFjoihEkhJCuTCUKcMFuSGRxIUhGW5cKXPmkFmUG8OFDBfcoMxT3BgS
+        LlyQWRmTTJHh+Z2+dXr+73/tffY+Z511zvedp359nbXXXut997f3Wu+aBhV1t/hT/DcG8twl1pQOEjln
+        2+CeNaPLRc7JNi4Tq0LHiVfF42JnEjJ6XrhzL62kOaR5HtJyog7qekVQ99y0qbhR/COS0d+IA4VrE/Gr
+        SHm+EE36TKR8vwnude0nuD/l+VfcJ7YQVbWHeFckQxwasdNF0qHCrz8omvSQ8LyHiKSTBA/Fryc+FPuK
+        KjpL+H80B/+ZWwQt/1craYkzRZO45nm/FpRBWZTp1yLYhG0z09biUZGrnPRvQ1oTu4kmcS13T4S62mzB
+        1qLaX3wqYmU/i1ME2lW8L2Iep6lhc70gcvcmqIO6EHVjQ8yDrdhcRJuJH0Ss5E2RDEnaSjwlPB9tAo5f
+        KLo0VuQhL/fEwImyqcOFDdji+eB7QUM9tbYTsfAbxMYip43EBYLG7hyxjZhU3EsZlEWZlJ0TtmBTtHNb
+        UUSvCy/4GLFoOla4ja+JYqJb88KfEIumJ4XbeJooJr6l70Qq/G+xk1gU7Sj+Esk+2izarqK6VaQK4Aqx
+        KLpSuG3EDcVFkOGVvChmKRq1D8T1w1/twha3beKAaEtxwgqHi30Er/ruInaFvBGz0lHC6zpStCm+ndiK
+        zdiOD/iS/MLHrOhi3hFeUBMEGsWjLdMZwuvjd5uwJReo5XhbZLvTo0XuhggN4MHCRT9MQEIoW4KLhNfJ
+        b79OXTEOYRTqDWEb+Lqe7hG5zBEmN1x7CYbBubyzhIHSnsLVdeLlXrGONhTuBCHodYKH8oh4VhBYXCw2
+        EK47hBdek9uFC9suEdiKzdiOD/jiYTW+4vNIhwkvmJi7q84Xfm9NzhVd9bTwe5mnGCn+F9vG7FE8yfME
+        MzOleFm4PfyOeXB+nf/iGMVufPT28Np8LtIFGjkGQPNU316gixgY4Vsq80sx/JzjlPVzYt46VbhN/C4h
+        hthe7nD+8mZLgD7f1axEbJ8CL8b1O4gS4lN1X28Sg/csAd4Qe4tSopvke6PypvF8Tjh94srfEsInfHNf
+        8X34ynsiEFAQg28uphHBCv11KpeHUFv4gC+5IImucrCLiBMeiY8FU+CTirK9vPtFTWE7PrgNCXzGvqFo
+        DZl6+knEjNM0ioSsXtYDoqZiowf4iK8xoBtqe/Gw8Bs+Em1i3u4xwZP+JODdK/wiYp5JoC6mv8fNN2K7
+        149v+DhWf4h001sktOga4ZXU5GrRJmxPeX8noatWywO4SrSp9wOY9BPgdaz9CTDQGTcn0fkTWOpGcOm7
+        wZqB0DzC7LGB0KxDYWZtCIX7Dl8ZDxAK87eEGkNhBgSeOI9wNQqnfxTYw6Co1HggTt6ww2U4JPREGo55
+        a1bD4bj0foAYtoa+N2dZJkTYazTqCfhGvcI+KysMcXm14pTVNHSZEus7vD5beJm3iZHiRiYmELtqnpOi
+        fdqrZ4Tf6xuwOk+LM+UcR1GLNi1+qeg9LY4mXRihm/O+vhbsPotBWteFEXxdT3FBsonc0hjfYu2lsfj9
+        91kayy62UiALh7kbIqt5cZQRYmPjydLx8WLRlsePEG3qujyObxNvq629QYKGiw0S1w5/tavYBok2LfUW
+        maXfJLX02+SWeqPk0m+V5VtigTIWvuibpWmzimyWRqW2yzMeH6fYpUWqb5dPItpqO6Swpg9MuAgy+hyZ
+        iQOlPkdmGPAszJEZF6Ow2oemThZth6YIeatqkY7NTTt9P5U4vMiUFd9erYOTrEZT51wPTvbRmj4620WT
+        HJ6On9KqF0fifdm9CfLcKSpoMPgf7LwlpTyf41wAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
